--- a/My Blog Website/Areas/Admin/Views/Posts/Delete.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Delete.cshtml
@@ -1,51 +1,51 @@
-﻿@model My_Blog_Website.Areas.Admin.Models.Authors
+﻿@model My_Blog_Website.Areas.Admin.Models.Posts
 
 @{
     ViewData["Title"] = "Delete";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h1 class="authorDetails">Delete</h1>
+<h1 class="postDetails">Delete</h1>
 
-<h3 class="authorDetails">Are you sure you want to delete this author?</h3>
-<div class="authorDetails">
-    <h4>Author Details</h4>
+<h3 class="postDetails">Are you sure you want to delete this post?</h3>
+<div class="postDetails">
+    <h4>Post Details</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
+            @Html.DisplayNameFor(model => model.Title)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FirstName)
+            @Html.DisplayFor(model => model.Title)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
+            @Html.DisplayNameFor(model => model.PostDescription)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LastName)
+            @Html.DisplayFor(model => model.PostDescription)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Username)
+            @Html.DisplayNameFor(model => model.FeatureImageUrl)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Username)
+            @Html.DisplayFor(model => model.FeatureImageUrl)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayNameFor(model => model.PostContent)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
+            @Html.DisplayFor(model => model.PostContent)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AboutAuth)
+            @Html.DisplayNameFor(model => model.Tags)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AboutAuth)
+            @Html.DisplayFor(model => model.Tags)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="AuthorId" />
+        <input type="hidden" asp-for="PostId" />
         <button class="btn btn-danger btn-sm" type="submit" value="Delete">
             <i class="fa fa-trash" aria-hidden="true"></i>
             Delete
