--- a/My Blog Website/Areas/Admin/Views/Posts/Single.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Single.cshtml
@@ -226,19 +226,21 @@
         </div>
         <div class="container-fluid pb-4 pt-5">
             <div class="container animate-box">
-            <div>
-                <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">You may like</div>
-            </div>
-            <div class="owl-carousel owl-theme" id="slider2">
+                <div>
+                    <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">You may like</div>
+                </div>
+                <div class="owl-carousel owl-theme" id="slider2">
                 @if (ViewBag.SimilarPosts != null && ViewBag.SimilarPosts.Count > 0)
                 {
                     foreach (var similarPost in ViewBag.SimilarPosts)
                     {
                         <div class="item px-2">
                             <div class="fh5co_hover_news_img">
-                                <div class="fh5co_news_img">
-                                    <img src="@similarPost.FeatureImageUrl" alt="@similarPost.Title" />
-                                </div>
+                                <a href="/@similarPost.Categories/@similarPost.Slug" class="d-block fh5co_small_post_heading">
+                                    <div class="fh5co_news_img">
+                                        <img src="@similarPost.FeatureImageUrl" alt="@similarPost.Title" />
+                                    </div>
+                                </a>
                                 <div>
                                     <a href="/@similarPost.Categories/@similarPost.Slug" class="d-block fh5co_small_post_heading">
                                         <span>@similarPost.Title</span>
