added email subscription and details view in post index

--- a/My Blog Website/Areas/Admin/Views/Posts/Index.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Posts/Index.cshtml
@@ -97,7 +97,7 @@
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@post.PostId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@post.PostId">Details</a> |
+                    <a asp-action="Single" asp-route-category="@URLHelper.GenerateCategorySlug(post.Categories)" asp-route-slug="@URLHelper.GeneratePostSlug(post.Title)">Details</a> |
                     <a asp-action="Delete" asp-route-id="@post.PostId">Delete</a>
                 </td>
             </tr>
